# expertsystem-fastapi-backend-restapi

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
src/controllers/: questions_controller.py
src/data/: pertanyaan.csv
src/ml_model/: mlp_model.pkl
src/models/: schemas.py
src/routes/: questions_routes.py
src/services/: questions_service.py
